--- a/Docs/Manual/man/man3/Atom.h.3
+++ b/Docs/Manual/man/man3/Atom.h.3
@@ -1,4 +1,4 @@
-.TH "F:/Projects/Killer_Engine/Headers/Engine/Atom.h" 3 "Tue Feb 12 2019" "Killer Engine" \" -*- nroff -*-
+.TH "F:/Projects/Killer_Engine/Headers/Engine/Atom.h" 3 "Wed Feb 13 2019" "Killer Engine" \" -*- nroff -*-
 .ad l
 .nh
 .SH NAME
@@ -108,7 +108,7 @@ F:/Projects/Killer_Engine/Headers/Engine/Atom.h
 .ti -1c
 .RI "typedef float \fBreal\fP"
 .br
-.RI "A configurable real number\&. Currently set to be 32 bits, could be set o 64 bits\&. "
+.RI "A configurable real number\&. Currently set to be 32 bits, could be set to 64 bits\&. "
 .in -1c
 .SS "Functions"
 
